traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: ')' expected but integer literal found.
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()1)){return true};else return false} 
                                                                         ^TraversalByColumn:3: error: ')' expected but '}' found.
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()1)){return true};else return false} 
                                                                                                           ^